[tool.poetry]
name = "tap-gong"
version = "0.1.0.1"
description = "`tap-gong` is a Singer tap for Gong, built with the Meltano SDK for Singer Taps."
authors = ["Stephen Bailey"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.11.0"
simpleeval = "0.9.11"
python-dateutil = "2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-gong = 'tap_gong.tap:TapGong.cli'
